--- a/214/index.html
+++ b/214/index.html
@@ -10,5 +10,8 @@
     <a href="aboutme.html">About Me</a>
     <h1>This is Rob the Incredible's Home Page!</h1>
     <img src="images/home.jpg" height="250">
+    <br>
+    <p>
+    <a href="aboutme.html">Click Here to Read All About Me!</a>
   </body>
 </html>
