Added Home Image to 214 Folder

--- a/214/index.html
+++ b/214/index.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Rob the Incredible's Home Page!</h1>
-    <img src="images/home.jpg">
+    <img src="214/home.jpg">
     <a href="aboutme.html">Click Here to Read All About Me!</a>
   </body>
 </html>
