CSS and Styling Added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+     <link href="firstwebpage.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <a href="index.html">Home</a>
@@ -10,5 +11,6 @@
     <a href="aboutme.html">About Me</a>
     <h1>This is Rob the Incredible's Home Page!</h1>
     <img src="images/home.jpg" height="250">
+    <p><a href="aboutme.html">Click Here to learn all about me!</a>
   </body>
 </html>
