Centered About Me Photo

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>All About...Rob Schwandt!</h1>
-    <img src="images/schwammy.jpg"/>
+    <img src="images/schwammy.jpg" align=center/>
     <br>
     <p> Hello world! I am a "Jack of All Trades" but Master of None...I'd like to say I'm a "Math Teacher", but really...there's so much more to me that just my day job</p>
     <p>I am always learning new stuff about technology, one of my ongoing passions!</p>
