Added Scratch Program to Portfolio Page

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,15 +3,18 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+	    <link href="firstwebpage.css" rel="stylesheet" type="text/css">
 	  </head>
 	  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
-    </a>
+    <a target="_blank" href="https://scratch.mit.edu/projects/117128233/">
+      <img src="images/ttlswebsitepic.PNG" height="300"></a>
+      <br>
+      <p><a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></p>
 	  </body>
 	</html>
