Added Center Tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Rob the Incredible's Home Page!</h1>
-    <img src="images/home.jpg" height="250">
-    <p><a href="aboutme.html">Click Here to learn all about me!</a>
+    <center></html><img src="images/home.jpg" height="250" align="center"></center>
+    <p><a href="aboutme.html">Click Here to learn all about me!</a></p>
   </body>
 </html>
