--- a/aboutme.html
+++ b/aboutme.html
@@ -10,14 +10,14 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>All About...Rob Schwandt!</h1>
-    <img src="images/schwammy.jpg" align=center/>
+    <center><img src="images/schwammy.jpg" align=center/></center>
     <br>
     <p> Hello world! I am a "Jack of All Trades" but Master of None...I'd like to say I'm a "Math Teacher", but really...there's so much more to me that just my day job</p>
     <p>I am always learning new stuff about technology, one of my ongoing passions!</p>
     <p>I am an avid "coder"; learning to code in C++, Ch (a variation of Objective-C), Python, HTML, and CSS</p>
     <p>I have a beautiful wife, Rebekah, and a gorgeous baby boy, Robby, and two puppies, Ricky (Maltipoo) and Lucy (Collie/Spaniel mix)</p>
     <a target="_blank" href="http://www.twitter.com/robschwandt">
-      <img src="images/twittericon.jpg"/>
+      <center><img src="images/twittericon.jpg"/></center>
     </a>
 	  </body>
 	</html>
