--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,10 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250" align="center">
+    <center><img src="images/portfolio.jpg" height="250" class="center"></center>
     <br>
     <a target="_blank" href="https://scratch.mit.edu/projects/117128233/">
-      <img src="images/ttlswebsitepic.PNG" height="300"></a>
+      <center><img src="images/ttlswebsitepic.PNG" height="300" class="center"></center></a>
       <br>
       <p><a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></p>
 	  </body>
