--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -12,7 +12,7 @@
     <h1>This is my Portfolio Page!</h1>
     <center><img src="images/portfolio.jpg" height="250" class="center"></center>
     <br>
-    <table>
+    <center><table>
       <tr><th>Picture</th><th>Web Address</th></tr>
       <tr><td> <a target="_blank" href="https://scratch.mit.edu/projects/117128233/">
       <center><img src="images/ttlswebsitepic.PNG" height="200" class="center"></center></a></td><td> <a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></td></tr>
@@ -20,7 +20,7 @@
       <tr><td>3</td><td>Chocolate</td></tr>
       <tr><td>4</td><td>Cookies and Cream</td></tr>
       <tr><td>5</td><td>Mint Chocolate Chip</td></tr>
-    </table>
+    </table></center>
       <br>
       </body>
 	</html>
