Stretched Portfolio Header Image

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -10,7 +10,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
-    <center><img src="images/portfolio.jpg" height="250" class="center"></center>
+    <center><img src="images/portfolio.jpg" height="250" width="1020" class="center"></center>
     <br>
     <center><table>
       <tr><th>Picture</th><th>Web Address</th></tr>
