Added New Portfolio Item: Photo Booth

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -15,8 +15,9 @@
     <center><table>
       <tr><th>Picture</th><th>Web Address</th></tr>
       <tr><td> <a target="_blank" href="https://scratch.mit.edu/projects/117128233/">
-      <center><img src="images/ttlswebsitepic.PNG" height="200" class="center"></center></a></td><td> <a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></td></tr>
-      <tr><td>2</td><td>Strawberry</td></tr>
+      <center><img src="images/ttlswebsitepic.PNG" height="150" class="center"></center></a></td><td> <a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></td></tr>
+      <tr><td><a target="_blank" href="files" download>
+      <center><img src="images/photobooth.png" height="150" class="center"></center></a></td><td><a href="files">Click Here or on the Picture to Download my App \n (aia to see the code, apk to use it on an android device</a></td></tr>
       <tr><td>3</td><td>Chocolate</td></tr>
       <tr><td>4</td><td>Cookies and Cream</td></tr>
       <tr><td>5</td><td>Mint Chocolate Chip</td></tr>
