Fixed File Download links

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -16,8 +16,8 @@
       <tr><th>Picture</th><th>Web Address</th></tr>
       <tr><td> <a target="_blank" href="https://scratch.mit.edu/projects/117128233/">
       <center><img src="images/ttlswebsitepic.PNG" height="150" class="center"></center></a></td><td> <a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></td></tr>
-      <tr><td><a target="_blank" href="files" download>
-      <center><img src="images/photobooth.png" height="150" class="center"></center></a></td><td><a href="files">Click Here or on the Picture to Download my App \n (aia to see the code, apk to use it on an android device</a></td></tr>
+      <tr><td>
+      <center><img src="images/photobooth.png" height="150" class="center"></center></a></td><td><p><a href="files/PhotoBooth.aia">Click Here to download the aia file (to edit and see the code).</a></p><p><a href="files/PhotoBooth.apk">Click here to download the apk file (to use it on an android device.</p></a></td></tr>
       <tr><td>3</td><td>Chocolate</td></tr>
       <tr><td>4</td><td>Cookies and Cream</td></tr>
       <tr><td>5</td><td>Mint Chocolate Chip</td></tr>
