Added Interactive Fiction to portfolio

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -18,7 +18,7 @@
       <center><img src="images/ttlswebsitepic.PNG" height="150" class="center"></center></a></td><td> <a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></td></tr>
       <tr><td>
       <center><img src="images/photobooth.png" height="150" class="center"></center></a></td><td><p><a href="files/PhotoBooth.aia">Photo Booth App - Click Here to download the aia file (to edit and see the code).</a></p><p><a href="files/PhotoBooth.apk">Photo Booth App - Click here to download the apk file (to use it on an android device).</p></a></td></tr>
-      <tr><td>3</td><td>Chocolate</td></tr>
+      <tr><td><center><img src="images/story.PNG" height="150" class="center"</center></td><td><a href="https://repl.it/ChEE/10">Interactive Fiction "Choose Your Own Adventure" using Python</a></td></tr>
       <tr><td>4</td><td>Cookies and Cream</td></tr>
       <tr><td>5</td><td>Mint Chocolate Chip</td></tr>
     </table></center>
