Zipped images into single folder

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -20,7 +20,7 @@
       <center><img src="images/photobooth.png" height="150" class="center"></center></a></td><td><p><a href="files/PhotoBooth.aia">Photo Booth App - Click Here to download the aia file (to edit and see the code).</a></p><p><a href="files/PhotoBooth.apk">Photo Booth App - Click here to download the apk file (to use it on an android device).</p></a></td></tr>
       <tr><td><center><img src="images/story.PNG" height="150" class="center"></center></td><td><a href="https://repl.it/ChEE/10">Interactive Fiction - Click Here to play "Choose Your Own Adventure" using Python and to see the code that made it.</a></td></tr>
       <tr><td><center><img src="images/pythoncraps.PNG" height="150" class="center"></center></a></td><td><a href="https://repl.it/CiNV/1">Python Craps - Click Here to play the game and see the code.</a></td></tr>
-      <tr><td><center><img src="images/python_picture_mashup_tn.png" height="150" class="center"></center></a></td><td><p><a href="files/rob_scott_art_walk_ver2.py" download>Python Photoshop - Click Here to see the code</a></p><p><a href="images/pythonps/" download>Click Here to See the Original photos that made this picture happen!</a></p></td></tr>
+      <tr><td><center><img src="images/python_picture_mashup_tn.png" height="150" class="center"></center></a></td><td><p><a href="files/rob_scott_art_walk_ver2.py" download>Python Photoshop - Click Here to see the code</a></p><p><a href="images/pythonpics.zip" download>Click Here to See the Original photos that made this picture happen!</a></p></td></tr>
     </table></center>
       <br>
       </body>
