Added Frogge to Portfolio and Updated home page photo

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -13,7 +13,7 @@
     <center><img src="images/portfolio.jpg" height="250" width="1020" class="center"></center>
     <br>
     <center><table>
-      <tr><th>Picture</th><th>Web Address</th></tr>
+      <tr><th>Picture Preview</th><th>Links</th></tr>
       <tr><td> <a target="_blank" href="https://scratch.mit.edu/projects/117128233/">
       <center><img src="images/ttlswebsitepic.PNG" height="150" class="center"></center></a></td><td> <a href="https://scratch.mit.edu/projects/117128233/">Scratch Project - You Can Play Twinkle Twinkle Little Star!</a></td></tr>
       <tr><td>
@@ -22,6 +22,7 @@
       <tr><td><center><img src="images/pythoncraps.PNG" height="150" class="center"></center></a></td><td><a href="https://repl.it/CiNV/1">Python Craps - Click Here to play the game and see the code.</a></td></tr>
       <tr><td><center><img src="images/python_picture_mashup_tn.png" height="150" class="center"></center></a></td><td><p><a href="files/rob_scott_art_walk_ver2.py" download>Python Photoshop - Click Here to see the code</a></p><p><a href="images/pythonpics.zip" download>Click Here to See the Original photos that made this picture happen!</a></p></td></tr>
       <tr><td><center><img src="images/mothereducinvolv.png" height="150" class="center"></center></a></td><td><p><a href="files/AdamSandy8thGradeData.py" download>Python Public Data Presentation - Click Here to see the code</a></p><p><a href="images/mothereducinvolv.png">Click Here to See the results of our inquiry!</a></p></td></tr>
+      <tr><td><center><img src="images/frogger.jpg" height="150" class="center"></center></a></td><td><p><a href="files/froggerRemix.nlogo" download>Net Logo Simulator - Click Here to play the game and see the code.</a></p></td></tr>
     </table></center>
       <br>
       </body>
