--- a/my_website/index.html
+++ b/my_website/index.html
@@ -10,7 +10,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Rob the Incredible's Home Page!</h1>
-    <center></html><img src="images/home.jpg" height="250" align="center"></center>
+    <tr><td><center><img src="images/beachpano.JPG" height="280" class="center"></center></td></tr>
     <p><a href="aboutme.html">Click Here to learn all about me!</a></p>
   </body>
 </html>
